--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Vite + React</title>
   </head>
   <body>
+    Before React Root
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    
+    After React Root
   </body>
 </html>
